# semtex-field-utilities

./: README.md  fieldfile.py  header.py  pyproject.toml  pytest.ini
scripts/: avg_ops.py  avg_sub_zero.py  compose.py  plotField.py  plot_mesh.py  plot_x_plane.py  plot_zplane.py
semtex_fieldio/: __init__.py  fieldfile.py  geometry.py  header.py  mesh.py
semtex_fieldplot/: plot_field_data.py  plot_mesh.py
src/paraview_reader/: semtex_to_vtk.py
src/semtex_fieldio/: fieldfile.py  header.py  mesh.py  paraview_reader.py  pyvista_export.py  vtk_export.py  vtk_export_helpers.py  wallmesh.py  walltraction.py
src/semtex_fieldplot/: interpolation.py  plot_field_data.py  plot_mesh.py  plot_wall_traction.py
tests/: test_avg_ops.py  test_fieldfile.py  test_mesh.py  test_semtex_to_vtk.py  test_wallmesh.py
