[project]
name = "semtex-field-utilities"
version = "0.1.0"
description = "Modern Python interface for Semtex field files and utility tools. Based on Scripts by Hugh Blackburn and Thomas Albrecht"
authors = [{ name = "Thomas Hultsch" }]
dependencies = ["numpy", "matplotlib"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
